# nextjs-approuter-melange2

./: .gitignore  .prettierignore  .vercelignore  Makefile  README.md  dune  dune-project  next.config.js  nextjs-approuter-melange2.opam  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(src)/rick-and-morty/[id]/: dune
app/: page.js
app/(src)/: layout.tsx
app/(src)/bindings/: Image.js
app/(src)/jokes/: page.js
app/bindings/: Link.js
app/rick-and-morty/: PageComponent.js
app/rick-and-morty/[id]/: page.js
bindings/: server.re
reason/: dune  page.re
reason/api/joke/: route.re
reason/bindings/: Image.rei
reason/rick-and-morty/: PageComponent.rei
reason/rick-and-morty/[id]/: page.rei
reason_app/: dune  layout.re
reason_app/api/joke/: dune
reason_app/dogs/: dune
reason_app/jokes/: dune
reason_app/rick-and-morty/: PageComponent.re  dune
reason_app/rick-and-morty/[id]/: error.re  error.rei  error.tsx.temp  loading.re  page.re
reason_bindings/: Error.re  Image.re
src/app/: dune  layout.js  layout.rei  page.js
src/app/api/: dune
src/app/api/joke/: route.js  route.rei
src/app/dogs/: page.js  page.re
src/app/jokes/: page.re
src/app/rick-and-morty/: PageComponent.js  PageComponent.re  dune  page.re  page.rei  page.tsx
src/app/rick-and-morty/[id]/: error.js  loading.js  page.js  page.re
src/bindings/: Image.re  Image.rei  Link.re  Link.rei  dune  server.re
src/components/: dune
src_app/: dune
