(subdir
 node_modules
 (subdir
  reason-promise/src/js
  (library
   (name promise)
   (modes melange)
   (preprocess
    (pps melange.ppx)))))

(melange.emit
 (target app)
 (alias nextjs)
 (module_systems es6)
 (libraries app bindings api)
 (promote (until-clean)))

; (dirs :standard \ node_modules)

(env
 (dev
  (flags
   (:standard -warn-error -69-32-26))))
