(subdir
 node_modules
 (subdir
  reason-promise/src/js
  (library
   (name promise)
   (modes melange)
   (preprocess
    (pps melange.ppx)))))

; (melange.emit
;  (target output)
;  (alias nextjs)
;  (module_systems es6)
;  (libraries app bindings api))

; (dirs :standard \ node_modules)

(env
 (dev
  (flags
   (:standard -warn-error -69-32-26))))

(rule
 (alias promote-app)
 (mode
  (promote (until-clean)))
 (deps
  (alias_rec nextjs))
 (targets
  (dir app))
 (action
  (bash "cp -r reason/output/reason app")))
