(subdir
 node_modules
 (subdir
  reason-promise/src/js
  (library
   (name promise)
   (modes melange)
   (preprocess
    (pps melange.ppx)))))

(melange.emit
 (target output)
 (alias nextjs)
 (module_systems es6)
 (libraries app bindings api))

(env
 (dev
  (flags
   (:standard -warn-error -69-32-26))))

(rule
 (alias promote-app)
 (mode
  (promote (until-clean)))
 (deps
  (alias_rec nextjs))
 (targets
  (dir src))
 (action
  (bash
   "mkdir src && cp -r output/reason_app src/app && cp -r output/reason_bindings src && cp -r output/node_modules src")))
