(lang dune 3.8)

(using melange 0.1)

(name nextjs-approuter-melange2)

(license "MIT")

(maintainers Paul Bacchus)

(authors Paul Bacchus)

(homepage https://github.com/psb/nextjs-approuter-melange2)

(bug_reports https://github.com/psb/nextjs-approuter-melange2/issues)

(package
 (allow_empty)
 (name nextjs-approuter-melange2)
 (synopsis "NextJS, AppRouter and ReasonReact")
 (description "NextJS, AppRouter and ReasonReact"))
