(library
 (name app)
 (modes melange)
 (libraries reason-react bindings dogs jokes rick_and_morty)
 (melange.runtime_deps
  favicon.ico
  globals.css
  (glob_files *.tsx))
 (preprocess
  (pps reason-react-ppx melange.ppx)))

; (melange.emit
;  (target output)
;  (alias nextjs)
;  (module_systems es6)
;  (libraries app bindings api)
;  ; (promote (until-clean))
;  )
